--- a/dev/static/styles/utils/mixins.sass
+++ b/dev/static/styles/utils/mixins.sass
@@ -2,6 +2,14 @@
   width: $a
   height: $b
 
+=font-face($family, $path, $weight: normal, $style: normal)
+  @font-face
+    font-family: $family
+    src: url('#{$path}.eot')
+    src: local('#{$path}'), url('#{$path}.eot?#iefix') format('embedded-opentype'), url('#{$path}.woff2') format('woff2'), url('#{$path}.woff') format('woff'), url('#{$path}.ttf') format('truetype')
+    font-weight: $weight
+    font-style: $style
+
 // @mixin placeholder {
 //   ::-webkit-input-placeholder {@content}
 //   :-moz-placeholder           {@content}
