--- a/dev/static/styles/utils/vars.sass
+++ b/dev/static/styles/utils/vars.sass
@@ -1,10 +1,15 @@
 // Colors
 $white: #ffffff
-$black: #000000
+$black: #080726
+$blue: #1616CC
+$grey: #f3f3f3
+
+$accent: $blue
+$main-font-color: $black
+
 
 // Sizes
-$base-font-size: 16px
-
-$content-size: 1024px
+$base-font-size: 20px
 
 // Fonts
+$main-font-family: Aeroport, sans-serif
