--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -13,6 +13,9 @@ body
   scroll-behavior: smooth
   text-rendering: optimizeSpeed
   line-height: 1.5
+  font-family: $main-font-family
+  font-weight: 300
+  font-style: normal
 
 *,
 *::before,
