--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -4,3 +4,13 @@ block variables
 	- var title = 'Главная страница'
 
 block content
+	// Hero section
+	section.section
+		.b-hero
+			._text
+				._title Продвигаем  бизнес в интернете
+			._action
+				button.b-btn.-round.-big._btn
+					+icon('plus', 'btn__icon-plus')
+					| Заказать  консультацию
+
