--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -90,5 +90,9 @@ button
 .content 
   flex: 1 0 auto
 
+.section
+  padding-top: 20px
+  padding-bottom: 20px
+
 //Модули
 @import 'modules/modules'
