--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -11,12 +11,21 @@
     &--round
         border-radius: 50%
         flex-direction: column
+        +sizebox(76px)
 
     &--big
-        width: 230px
-        height: 230px
+        +sizebox(230px)
 
-    &__icon-plus
-        width: 57px
-        height: 57px
-        margin-bottom: 10px
+    &--light
+        border: 1px solid $white
+        svg
+            stroke: $white
+
+    &__icon
+        &-plus
+            width: 57px
+            height: 57px
+            margin-bottom: 10px
+        &-arrow
+            width: 38px
+            height: 29px
