--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -20,6 +20,8 @@
         border: 1px solid $white
         svg
             stroke: $white
+            fill: $white
+            color: $white
 
     &__icon
         &-plus
@@ -29,3 +31,7 @@
         &-arrow
             width: 38px
             height: 29px
+        &-next-arrow
+            width: 38px
+            height: 29px
+            margin-bottom: 20px
