--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -7,11 +7,16 @@
     border: 1px solid $accent
     background-color: transparent
     color: $accent
+    svg
+        fill: $accent
+        stroke: $accent
 
     &--round
         border-radius: 50%
         flex-direction: column
         +sizebox(76px)
+        min-width: 76px
+        min-height: 76px
 
     &--big
         +sizebox(230px)
