--- a/dev/pug/pages/index/cases.pug
+++ b/dev/pug/pages/index/cases.pug
@@ -40,7 +40,7 @@
 // Cases
 section.section
     .b-cases
-        .h2._title Кейсы
+        h2.h2._title Кейсы
         ._cards
             each card in cases
                 a(href=card.link, alt=card.name)._card
