--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -94,5 +94,11 @@ button
   padding-top: 40px
   padding-bottom: 40px
 
+.h2
+  font-size: 45px
+  line-height: 50px
+  font-weight: 200
+  margin-bottom: 55px
+
 //Модули
 @import 'modules/modules'
