--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -21,6 +21,12 @@
     &--big
         +sizebox(230px)
 
+    &--blue
+        background-color: $accent
+        svg
+            fill: $white
+            stroke: $white
+            color: $white
     &--light
         border: 1px solid $white
         svg
@@ -40,3 +46,9 @@
             width: 38px
             height: 29px
             margin-bottom: 20px
+        &-empty-triangle
+            width: 82px
+            height: 96px
+            margin-left: 25px
+
+
