--- a/dev/static/styles/modules/index/hero.sass
+++ b/dev/static/styles/modules/index/hero.sass
@@ -1,6 +1,6 @@
 .hero
-    padding-top: 40px
-    padding-bottom: 40px
+    //padding-top: 40px
+    //padding-bottom: 40px
     +row-flex()
 
     &__text
