Add clients section

--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -9,3 +9,4 @@ block content
 	include pages/index/cases
 	include pages/index/showreel
 	include pages/index/counters
+	include pages/index/clients
