--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -100,5 +100,11 @@ button
   font-weight: 200
   margin-bottom: 55px
 
+.hidden
+  overflow: hidden
+  height: 0
+  width: 0
+
+
 //Модули
 @import 'modules/modules'
