Add feedback section

--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -10,3 +10,5 @@ block content
 	include pages/index/showreel
 	include pages/index/counters
 	include pages/index/clients
+	include pages/index/feedback
+	include pages/index/latest-post
