--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -42,6 +42,8 @@
         &-arrow
             width: 38px
             height: 29px
+            &--flip
+                transform: rotateZ(180deg)
         &-next-arrow
             width: 38px
             height: 29px
