--- a/dev/pug/template/main.pug
+++ b/dev/pug/template/main.pug
@@ -11,6 +11,7 @@ html(lang="ru-RU")
 		<![endif]-->
 		meta(name="viewport" content="width=device-width,initial-scale=1")
 		meta(name="keywords" content="")
+		link(rel="stylesheet" type='text/css' href="css/libs.min.css")
 		link(rel="stylesheet" type='text/css' href="css/styles.min.css")
 		//include ../modules/header/favicon
 		//include ../modules/header/og
