--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -12,3 +12,4 @@ block content
 	include pages/index/clients
 	include pages/index/feedback
 	include pages/index/latest-post
+	include pages/index/hr
