--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -22,6 +22,11 @@ body
 *::after  
   box-sizing: border-box
 
+a[href^='mailto:'],
+a[href^='tel:']
+  white-space: nowrap
+
+
 ul[class],
 ol[class] 
   list-style: none
