--- a/dev/static/styles/modules/footer/footer.sass
+++ b/dev/static/styles/modules/footer/footer.sass
@@ -1,2 +1,33 @@
 footer 
 	flex: 0 0 auto
+.footer
+    margin-top: 80px
+    margin-bottom: 22px
+    +row-flex()
+    align-items: center
+    &__col
+        +col()
+        +size(4)
+    &__btn-wrap
+        display: flex
+        justify-content: center
+        align-items: center
+    &__social
+        display: flex
+        justify-content: flex-end
+    &__icon
+        &:not(:last-child)
+            margin-right: 30px
+    &__social-icon
+        height: 26px
+        width: auto
+    a
+        text-decoration: none
+        color: $accent
+.icon
+    &-agima
+        width: 68px
+    &-fb,
+    &-vk,
+    &-insta
+        width: 26px
