Add fancybox for video

--- a/dev/pug/template/main.pug
+++ b/dev/pug/template/main.pug
@@ -12,6 +12,7 @@ html(lang="ru-RU")
 		meta(name="viewport" content="width=device-width,initial-scale=1")
 		meta(name="keywords" content="")
 		link(rel="stylesheet" type='text/css' href="css/libs.min.css")
+		link(rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css")
 		link(rel="stylesheet" type='text/css' href="css/styles.min.css")
 		//include ../modules/header/favicon
 		//include ../modules/header/og
