--- a/dev/static/styles/modules/index/taber.sass
+++ b/dev/static/styles/modules/index/taber.sass
@@ -24,6 +24,7 @@
 
     &__title-item
         opacity: .5
+        transition: all .5s ease
         &:not(:last-child)
             margin-bottom: 30px
         &.active
