--- a/dev/pug/modules/header/header.pug
+++ b/dev/pug/modules/header/header.pug
@@ -27,7 +27,7 @@ header.b-header
         ._logo
             +icon('logo', 'header__logo-icon')
         ._showreel
-            a._link(href='#', alt='Showreel')
+            a._link(data-fancybox, href="https://youtu.be/I_l8eApu9G4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0")
                 +icon('triangle-right')
                 | Showreel
         ._city
