--- a/dev/pug/pages/index/showreel.pug
+++ b/dev/pug/pages/index/showreel.pug
@@ -16,5 +16,5 @@ section.section
                 span._time--big 90
                 span секунд
             ._btn-wrap
-                button.b-btn.-big.-full.-blue.-round._btn
+                a(data-fancybox, href="https://youtu.be/I_l8eApu9G4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0").b-btn.-big.-full.-blue.-round._btn
                     +icon('empty_triangle', 'btn__icon-empty-triangle')
