--- a/dev/static/styles/modules/index/feedback.sass
+++ b/dev/static/styles/modules/index/feedback.sass
@@ -16,6 +16,7 @@
             flex-direction: column
             align-items: flex-start
             justify-content: space-between
+            padding-right: 20px
         &-right
             width: 60%
     &__icon-quotes
