Fix links for image

--- a/dev/pug/pages/index/latest-post.pug
+++ b/dev/pug/pages/index/latest-post.pug
@@ -5,15 +5,15 @@ section.section
         ._items
             ._item
                 ._category Интернет-маркетинг
-                a(href="#", title="Дизайн", style="background-image: url(/images/content/design.jpg)")._img
+                a(href="#", title="Дизайн", style="background-image: url(images/content/design.jpg)")._img
                 a(href="#", title="Дизайн")._name
                     | Дизайн, основанный на опыте пользователя
             ._item
                 ._category Разработка
-                a(href="#", title="Вся правда про SSL-сертификаты", style="background-image: url(/images/content/ssl.jpg)")._img
+                a(href="#", title="Вся правда про SSL-сертификаты", style="background-image: url(images/content/ssl.jpg)")._img
                 a(href="#", title="Вся правда про SSL-сертификаты")._name
                     | Вся правда про SSL-сертификаты
             ._btn-wrap
                 button.b-btn.-round.-big._btn
                     +icon('plus', 'btn__icon-plus')
-                    | Подписаться на рассылку
+                    | Подписаться на рассылку 
