--- a/dev/pug/modules/header/header.pug
+++ b/dev/pug/modules/header/header.pug
@@ -31,16 +31,16 @@ header.b-header
                 +icon('triangle-right')
                 | Showreel
         ._city
-            a._link(href='#', alt='Брянск')
+            a._link(href='#', title='Брянск')
                 +icon('triangle-down')
                 | Брянск
         ._phone
-            a._link(href='tel:+78005512557', alt='8 (800) 551-25-57') 8 (800) 551-25-57
+            a._link(href='tel:+78005512557', title='8 (800) 551-25-57') 8 (800) 551-25-57
         nav.b-main-nav._main-nav
             ul._items
                 each item in nav
                     li._item
-                        a(href=item.link, alt=item.name)._link= item.name
+                        a(href=item.link, title=item.name)._link= item.name
 
             .b-sandwich._sandwich
                 ._line.-top
