--- a/dev/pug/pages/index/feedback.pug
+++ b/dev/pug/pages/index/feedback.pug
@@ -6,7 +6,7 @@
         },
         {
             name: 'АО «ЭР-Телеком Холдинг»',
-            text: 'АО "ЭР-Телеком Холдинг" благодарит компанию ITC MEDIA за плодотворное сотрудничество по поисковому продвижению и технической поддержке сайтов bks.tv и bstk.bks.tv. Сотрудники ITC MEDIA проявляют себя как профессиональная команда, которой  можем доверить не только своевременное и качественное выполнение поставленных задач, но и внедрение комплексных решений по улучшению сайта.',
+            text: 'АО "ЭР-Телеком Холдинг" благодарит компанию ITC MEDIA за плодотворное сотрудничество по поисковому продвижению и технической поддержке сайтов bks.tv и bstk.bks.tv. Сотрудники ITC MEDIA проявляют себя как профессиональная команда.',
             original: 'images/content/feedback/bks.jpg',
         },
         {
@@ -43,7 +43,7 @@ section.section
             ._navigation
                 ._prev
                     button.b-btn.-round._btn
-                        +icon('arrow', 'btn__icon-arrow btn__icon-arrow--flip')
+                        +icon('arrow-left', 'btn__icon-arrow btn__icon-arrow-left')
                 ._next
                     button.b-btn.-round._btn
                         +icon('arrow', 'btn__icon-arrow')
