--- a/dev/pug/pages/index/latest-post.pug
+++ b/dev/pug/pages/index/latest-post.pug
@@ -15,5 +15,5 @@ section.section
                     | Вся правда про SSL-сертификаты
             ._btn-wrap
                 button.b-btn.-round.-big._btn
-                    +icon('plus', 'btn__icon-plus')
+                    //+icon('plus', 'btn__icon-plus')
                     | Подписаться на рассылку
