--- a/dev/static/styles/modules/index/cases.sass
+++ b/dev/static/styles/modules/index/cases.sass
@@ -4,6 +4,8 @@
     &__card
         +col()
         +size(4)
+        +size-md(6)
+        +size-sm(12)
         display: flex
         flex-direction: column
         text-decoration: none
@@ -40,6 +42,8 @@
     &__other
         +col()
         +size(4)
+        +size-md(6)
+        +size-sm(12)
         display: flex
         justify-content: center
         align-items: center
