--- a/dev/static/styles/modules/index/latest-post.sass
+++ b/dev/static/styles/modules/index/latest-post.sass
@@ -4,6 +4,7 @@
     &__item
         +col()
         +size(4)
+        +size-sm(12)
 
     &__img
         display: block
@@ -15,12 +16,11 @@
         height: 220px
         margin-top: 20px
         margin-bottom: 40px
-    &__name
-        text-decoration: none
-        color: $accent
+
     &__btn-wrap
         +col()
         +size(4)
+        +size-sm(12)
         display: flex
         justify-content: center
         padding-top: 50px
