--- a/dev/static/styles/modules/index/feedback.sass
+++ b/dev/static/styles/modules/index/feedback.sass
@@ -6,6 +6,7 @@
     &__desc
         +col()
         +size(10)
+        +size-md(12)
         overflow: hidden
 
     &__item
@@ -15,21 +16,27 @@
             display: flex
             flex-direction: column
             align-items: flex-start
-            justify-content: space-between
             padding-right: 20px
         &-right
             width: 60%
+    &__name
+        margin-bottom: 35px
     &__icon-quotes
         width: 158px
         height: 156px
+        fill: $accent
+        +sm-block()
+            +sizebox(100px)
     &__text
         margin-bottom: 50px
-    &__original
-        text-decoration: none
-        color: $accent
     &__navigation
         +col()
         +size(2)
+        +size-md(12)
+
         display: flex
         align-self: center
         justify-content: flex-end
+        +md-block()
+            justify-content: center
+            margin-top: 20px
