--- a/dev/static/styles/modules/index/showreel.sass
+++ b/dev/static/styles/modules/index/showreel.sass
@@ -7,22 +7,45 @@
         padding: 74px 58px
         align-items: center
         +row-flex()
+        +sm-block()
+            padding: 40px
     &__desc
         +col()
         +size(6)
+        +size-sm(12)
+        +sm-block()
+            display: flex
+            flex-direction: column
+            margin-bottom: 40px
     &__subtitle
         font-size: 40px
         line-height: 50px
         font-weight: 200
         margin-bottom: 53px
+        +md-block()
+            font-size: 25px
+            line-height: 35px
+        +sm-block()
+            flex: 1
+            margin-bottom: 30px
+    &__items
+        +sm-block()
+            flex: 1
+
     &__item
         line-height: 30px
         font-weight: 200
         &:not(:last-child)
             margin-bottom: 10px
+        +md-block()
+            font-size: 17px
+            line-height: 22px
+            &:not(:last-child)
+                margin-bottom: 5px
     &__time
         +col()
         +size(2)
+        +size-sm(6)
         display: flex
         flex-direction: column
         align-items: center
@@ -36,3 +59,13 @@
         justify-content: center
         +col()
         +size(4)
+        +size-sm(6)
+        +md-block()
+            justify-content: flex-end
+    &__btn
+        +md-block()
+            +sizebox(150px)
+        & svg
+            width: 50px
+            height: 56px
+            margin-left: 15px
