--- a/dev/static/styles/modules/footer/footer.sass
+++ b/dev/static/styles/modules/footer/footer.sass
@@ -9,11 +9,14 @@ footer
         +col()
         +size(4)
         +size-sm(6)
+        +size-xs(12)
         &:nth-child(2)
             +size-sm(12)
             +sm-block()
                 order: 1
                 margin-top: 20px
+            +xs-block()
+                order: 0
 
     &__btn-wrap
         display: flex
