--- a/dev/static/styles/modules/index/hero.sass
+++ b/dev/static/styles/modules/index/hero.sass
@@ -24,6 +24,9 @@
         +sm-block()
             font-size: 42px
             line-height: 55px
+        +xs-block()
+            font-size: 30px
+            line-height: 40px
     &__showreel
         +col()
         +size(12)
