--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -107,12 +107,19 @@ button
 .section
   padding-top: 40px
   padding-bottom: 40px
+  +xs-block()
+    padding-top: 20px
+    padding-bottom: 20px
 
 .h2
   font-size: 45px
   line-height: 50px
   font-weight: 200
   margin-bottom: 55px
+  +xs-block()
+    font-size: 35px
+    line-height: 40px
+    margin-bottom: 20px
 
 .hidden
   overflow: hidden
