--- a/dev/static/styles/modules/index/taber.sass
+++ b/dev/static/styles/modules/index/taber.sass
@@ -59,6 +59,8 @@
                 top: 50%
                 background-color: $white
                 +md(width, 30px)
+                +xs-block()
+                    width: 10px
 
     &__title
         font-size: 40px
@@ -67,6 +69,9 @@
         +md-block()
             font-size: 25px
             line-height: 35px
+        +xs-block()
+            font-size: 18px
+            line-height: 24px
     &__card
         display: none
         justify-content: space-between
@@ -78,7 +83,17 @@
         padding-left: 30px
         +sm-block()
             padding-left: 0
+        +xs-block()
+            font-size: 16px
+            line-height: 20px
 
     &__btn
         min-width: 76px
         margin-left: 54px
+        +xs-block()
+            +sizebox(50px)
+            margin-left: 20px
+            min-width: 50px
+            min-height: 50px
+            svg
+                width: 25px
