--- a/dev/static/styles/modules/index/cases.sass
+++ b/dev/static/styles/modules/index/cases.sass
@@ -51,6 +51,11 @@
             width: 0
             overflow: hidden
             transition: all .8s ease
+        &:hover, &:focus
+            background-color: transparent
+            svg
+                fill: $white
+                stroke: $white
 
     &__card-desc
         width: 75%
