--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -35,6 +35,12 @@ a
   &:hover,
   &:focus
     color: $main-font-color
+  &.link--icon
+    svg
+      fill: $accent
+    &:hover, &:focus
+      svg
+        fill: $main-font-color
 
 ul[class],
 ol[class] 
