--- a/dev/pug/pages/index/clients.pug
+++ b/dev/pug/pages/index/clients.pug
@@ -89,11 +89,13 @@ section.section
     .b-clients
         .hidden
             svg.defs-only
-              filter#monochrome(color-interpolation-filters='sRGB', x='0', y='0', height='100%', width='100%')
-                fecolormatrix(type='matrix', values='0.95 0 0 0 0.05\
-                0.85 0 0 0 0.15  \
-                0.50 0 0 0 0.50 \
-                0    0 0 1 0')
+                filter#blur
+                    fegaussianblur(stdDeviation='20')
+                filter#monochrome(color-interpolation-filters='sRGB', x='0', y='0', height='100%', width='100%')
+                    fecolormatrix(type='matrix', values='0.95 0 0 0 0.05\
+                        0.85 0 0 0 0.15  \
+                        0.50 0 0 0 0.50 \
+                        0    0 0 1 0')
         h2.h2._title Клиенты
         ._list
             each client in clients
