--- a/dev/pug/pages/index/hero.pug
+++ b/dev/pug/pages/index/hero.pug
@@ -8,6 +8,6 @@ section.section
                 +icon('plus', 'btn__icon-plus')
                 | Заказать  консультацию
         ._showreel
-            a._link(data-fancybox, href="https://youtu.be/I_l8eApu9G4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0")
+            a._link.link--icon(data-fancybox, href="https://youtu.be/I_l8eApu9G4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0")
                 +icon('triangle-right')
                 | Showreel
