--- a/dev/static/styles/modules/index/taber.sass
+++ b/dev/static/styles/modules/index/taber.sass
@@ -41,6 +41,9 @@
     &__title-item
         opacity: .5
         transition: all .5s ease
+        cursor: pointer
+        &:focus, &:hover
+            opacity: 1
 
         &:not(:last-child)
             margin-bottom: 30px
@@ -66,6 +69,7 @@
         font-size: 40px
         line-height: 55px
         font-weight: 100
+
         +md-block()
             font-size: 25px
             line-height: 35px
