--- a/dev/pug/pages/index/cases.pug
+++ b/dev/pug/pages/index/cases.pug
@@ -50,7 +50,7 @@ section.section
                             button.b-btn.-small.-round.-light._btn
                                 +icon('arrow', 'btn__icon-arrow')
                         ._card-desc= card.text
-            ._other
+            //._other
                 button.b-btn.-round.-big._btn-next
                     +icon('arrow', 'btn__icon-next-arrow')
                     | Смотреть еще
