--- a/dev/static/styles/modules/index/cases.sass
+++ b/dev/static/styles/modules/index/cases.sass
@@ -67,7 +67,7 @@
         display: flex
         justify-content: center
         align-items: center
-        +xs-block()
+        +sm-block()
             .cases__btn-next
                 +sizebox(200px)
                 font-size: 20px
