--- a/dev/pug/pages/index/showreel.pug
+++ b/dev/pug/pages/index/showreel.pug
@@ -4,17 +4,13 @@ section.section
         h2.h2._title Компания
         ._wrap(style="background-image: url(images/general/showreel_bg.jpg)")
             ._desc
-                h3.h3._subtitle Агентство интернет- маркетинга с чёткими принципами работы
+                h3.h3._subtitle О нас за 90 секунд
                 ul._items
                     li._item Маркетинг в основе
                     li._item Системный подход
                     li._item Прозрачность в отношениях
                     li._item Постоянное обучение
 
-            ._time
-                span О нас за
-                span._time--big 90
-                span секунд
             ._btn-wrap
                 a(data-fancybox, href="https://youtu.be/I_l8eApu9G4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0").b-btn.-big.-full.-blue.-round._btn
                     +icon('empty_triangle', 'btn__icon-empty-triangle')
