--- a/dev/static/styles/modules/index/feedback.sass
+++ b/dev/static/styles/modules/index/feedback.sass
@@ -11,16 +11,30 @@
 
     &__item
         display: flex
+        +xs-block()
+            flex-direction: column
         &-left
             width: 40%
             display: flex
             flex-direction: column
             align-items: flex-start
             padding-right: 20px
+            +xs-block()
+                width: 100%
+                flex-direction: row
+                align-items: center
+                padding-bottom: 20px
+                margin-bottom: 20px
+                border-bottom: 1px solid rgba($main-font-color, .3)
         &-right
             width: 60%
+            +xs-block()
+                width: 100%
     &__name
         margin-bottom: 35px
+        +xs-block()
+            margin-bottom: 0
+            margin-right: 20px
     &__icon-quotes
         width: 158px
         height: 156px
