--- a/dev/static/styles/modules/index/showreel.sass
+++ b/dev/static/styles/modules/index/showreel.sass
@@ -28,9 +28,13 @@
         +sm-block()
             flex: 1
             margin-bottom: 30px
+        +xs-block()
+            font-size: 20px
+            line-height: 27px
     &__items
         +sm-block()
-            flex: 1
+            display: none
+
 
     &__item
         line-height: 30px
@@ -42,26 +46,16 @@
             line-height: 22px
             &:not(:last-child)
                 margin-bottom: 5px
-    &__time
-        +col()
-        +size(2)
-        +size-sm(6)
-        display: flex
-        flex-direction: column
-        align-items: center
-        font-weight: 200
-        &--big
-            font-size: 80px
-            line-height: 90px
+
     &__btn-wrap
         display: flex
         align-items: center
         justify-content: center
         +col()
-        +size(4)
-        +size-sm(6)
+        +size(6)
+        +size-sm(12)
         +md-block()
-            justify-content: flex-end
+            justify-content: center
     &__btn
         +md-block()
             +sizebox(150px)
@@ -69,3 +63,8 @@
             width: 50px
             height: 56px
             margin-left: 15px
+        +xs-block()
+            +sizebox(100px)
+            .icon-empty_triangle
+                width: 40px
+                height: 44px
