Hide counters on mobile

--- a/dev/pug/pages/index/counters.pug
+++ b/dev/pug/pages/index/counters.pug
@@ -26,7 +26,7 @@
     ]
 
 // Counters
-section.section
+section.section.mobile-none
     .b-counters
         each card in counts
             ._card(class= card.special ? 'counters__card--spec' : '')
